Tour page fixed (again) and code blocks now scrolls instead of wraps

--- a/scss/1-common/_fixes.scss
+++ b/scss/1-common/_fixes.scss
@@ -19,3 +19,9 @@ button:hover
 *:focus {
     outline: 0 !important;
 }
+
+/* Always show the scrollbar to prevent "jumping" */
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
+}
